Fixed LinkedIN URL

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="footer-section">
         <span class="footer-label">links</span>
-        <a href="https://www.linkedin.com/in/brentan-rath-510565200/">linkedin</a> &middot;
+        <a href="https://www.linkedin.com/in/brentan-rath/">linkedin</a> &middot;
         <a href="https://github.com/brentanrath">github</a>
       </div>
     </header>
