Added fianl remarks for configwindowsiso til

--- a/til/configure-windows-iso.html
+++ b/til/configure-windows-iso.html
@@ -72,6 +72,7 @@
     <details class="til-collapsible">
       <summary>Sample autounattend.xml &amp; downloads</summary>
       <p>Here&rsquo;s the answer file I created. Place <code>autounattend.xml</code> in the root of your USB drive next to the ISO (or inside the ISO&rsquo;s <code>sources</code> folder for some setups). You can copy the full XML below.</p>
+      <p>I removed a lot of applications that are not needed, added a custom wallpaper, custom timezone, computer name, accounts. That's really about it. Overall I am not a fan of Windows 11 or 10, but it is what it is, and still the best for gaming.</p>
       <pre><code id="autounattend-xml"></code></pre>
       <p><strong>Downloads:</strong></p>
       <ul>
