Added cute image to bottom of til

--- a/til/configure-windows-iso.html
+++ b/til/configure-windows-iso.html
@@ -88,6 +88,8 @@
       <li><a href="https://learn.microsoft.com/en-us/windows-hardware/customize/desktop/unattend/microsoft-windows-shell-setup-computername" target="_blank" rel="noopener noreferrer">ComputerName</a> — Microsoft Learn (unattend.xml setting)</li>
     </ul>
 
+    <img src="../assets/images/rabbit_meme_1.png" alt="Sorry, I'm too cute to care what you think" class="til-meme">
+    
   </article>
   <div id="site-footer"></div>
   <script>
